<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="account">帐号</string>
    <string name="add">添加</string>
    <string name="addSpeaker">+添加音箱</string>
    <string name="add_response_content">添加回复内容</string>
    <string name="add_similar_answer_hint">添加多条回复，音箱将会从中随机挑选播放</string>
    <string name="add_similar_question">添加相似问法</string>
    <string name="add_similar_question_hint">添加相似的问法，可以帮助音箱更准确识别您的问题</string>
    <string name="add_speaker_btn">开始添加斐讯AI音箱</string>
    <string name="add_to_my_favorite_hint">已添加到我的收藏</string>
    <string name="air_cleaner">空气净化器</string>
    <string name="album_detail">专辑详情</string>
    <string name="album_view">选择图片</string>
    <string name="answer_cannot_contains_sensitiveWords">回复不能包含敏感字符</string>
    <string name="answer_only_support_chinese_number">回复仅支持中文和数字</string>
    <string name="answer_tip">魔盒听到的是:</string>
    <string name="ap_disconnect_message">请将手机WiFi连接到“%s”</string>
    <string name="ap_disconnect_refresh">请将手机WiFi连接到“%s”后点击“刷新”</string>
    <string name="ap_open_connect_title">手机与斐讯AI音箱连接中，请稍候...</string>
    <string name="ap_open_wifi_connect">去连接</string>
    <string name="ap_open_wifi_tip">请在手机中连接WiFi名称为“%s”的无线网络，等待WiFi连接成功后返回此页面</string>
    <string name="app_exit_hit">再按一次退出程序</string>
    <string name="app_name">斐讯AI</string>
    <string name="app_new">new</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_to_exit">退出后将无法控制斐讯AI音箱，无法接收消息，确认要退出吗？</string>
    <string name="audition">试听</string>
    <string name="auto_refresh_token">自动更新 Token 失败</string>
    <string name="baidu_music">百度音乐</string>
    <string name="bass_enhancement">低音增强</string>
    <string name="batch_operation">批量操作</string>
    <string name="bind_guide_btn_str">白色灯光闪烁</string>
    <string name="bind_guide_tip">直至音箱底部出现白色灯光闪烁</string>
    <string name="bind_guide_title">长按音箱顶部按键灯5S</string>
    <string name="bind_speaker_dialog_msg">确定要取消添加斐讯AI音箱吗？</string>
    <string name="bind_speaker_dialog_no">否</string>
    <string name="bind_speaker_dialog_yes">是</string>
    <string name="binding_phone_number">绑定手机号</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">请选择生日</string>
    <string name="body_fat_calculator">体脂称</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brj_r">空气检测仪</string>
    <string name="broadcast">广播</string>
    <string name="buggly_id">BUGLY_APPID</string>
    <string name="build_number">build_number</string>
    <string name="build_type">BUILD_TYPE</string>
    <string name="cameraPermissionHint">在设置-应用-斐讯AI-权限中开启相机权限，以正常使用拍照功能</string>
    <string name="cancel">取消</string>
    <string name="cancel_collect_hint">已取消收藏</string>
    <string name="cancel_download_hint">"正在下载最新版本，确定退出
下载吗？"</string>
    <string name="captchaDialog_title">请输入图片验证码</string>
    <string name="captcha_error">验证码错误请重新输入</string>
    <string name="captcha_failure">获取图形验证码失败</string>
    <string name="captcha_sent">验证码已发送</string>
    <string name="captcha_sms">短信验证码</string>
    <string name="change_net_dialog_msg">更换网络过程中，斐讯AI音箱将无法使用，确定更换网络？</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="change_phone_warnings">更换手机号后，下次请使用新手机号登录，找回密码</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_box_connect_state_fail">检查设备联网失败</string>
    <string name="check_box_connect_state_ok">音箱联网成功</string>
    <string name="check_box_connect_state_timeout">检查音箱联网状态超时</string>
    <string name="check_phone_already_register">该手机号已注册，你可以直接登录</string>
    <string name="check_phone_already_register2">该手机号已被注册</string>
    <string name="check_phone_not_register">该手机号未注册</string>
    <string name="check_update">检查更新</string>
    <string name="choiceness">精选</string>
    <string name="chose_birthday">选择生日日期</string>
    <string name="chose_job">选择职业</string>
    <string name="chose_time">选择时间</string>
    <string name="circle_remind">循环提醒</string>
    <string name="close">关闭</string>
    <string name="collect_music_hint">播放音乐时，请对斐讯AI音箱说：“%s，收藏”</string>
    <string name="collect_program_hint">播放节目时，请对斐讯AI音箱说：“%s，收藏”</string>
    <string name="complete">完成</string>
    <string name="config_net_connect">连接</string>
    <string name="config_net_hint_nopassword">无密码WiFi</string>
    <string name="config_net_hint_password">请输入WiFi密码</string>
    <string name="config_net_hint_wifi_name">请输入WiFi名称</string>
    <string name="config_net_no_network">手机网络异常，请检查网络设置</string>
    <string name="config_net_no_network_retry">手机网络异常，请检查网络设置，确认手机正常联网后点击“重试”</string>
    <string name="config_net_password_not_ascii">密码不能包含特殊字符</string>
    <string name="config_net_password_overlimit">密码超出63位限制</string>
    <string name="config_net_request_error_message">"1.请检查输入的WiFi密码是否正确
2.请检查路由器是否正常工作"</string>
    <string name="config_net_request_error_title">斐讯AI音箱未连接路由器</string>
    <string name="config_net_restrict_message">请检查路由器是否正常连接网络</string>
    <string name="config_net_restrict_title">斐讯AI音箱未连接网络</string>
    <string name="config_net_scan_wifi">正在获取WiFi，请稍候...</string>
    <string name="config_net_server_error">服务器异常，请稍后再试</string>
    <string name="config_net_server_error_retry">服务器异常，请重试</string>
    <string name="config_net_server_error_retry_with_code">服务器异常，请重试（%s）</string>
    <string name="config_net_server_error_with_code">服务器异常，请稍后再试（%s）</string>
    <string name="config_net_ssid_overlimit">SSID超出32位限制</string>
    <string name="config_net_title">将斐讯AI音箱连接到网络</string>
    <string name="config_net_toast_password">请输入5-63位WiFi密码</string>
    <string name="config_net_try_again">再试一次</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forgot_pwd_reset_login">重置登录密码</string>
    <string name="function">功能</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint_captcha">请输入手机验证码</string>
    <string name="hint_click_next">点击“下一步”代表您同意</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="hint_login_pwd">请输入6~20位登录密码</string>
    <string name="hint_login_user">请输入11位手机号码</string>
    <string name="home_page">AI音箱</string>
    <string name="input_new_password">请输入6-20位新密码</string>
    <string name="input_new_phone_number">请输入新手机号码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="login">登录</string>
    <string name="me">我</string>
    <string name="new_password">新密码</string>
    <string name="new_phone_number">新手机号</string>
    <string name="next_step">下一步</string>
    <string name="old_password">旧密码</string>
    <string name="password">密码</string>
    <string name="password_set">设置密码</string>
    <string name="phone">手机号</string>
    <string name="player">播放器</string>
    <string name="power_guide_btn">蓝色灯光闪烁</string>
    <string name="power_guide_tip">等待音箱底部蓝色灯光闪烁</string>
    <string name="power_guide_tip2">如有多台斐讯AI音箱，请依次添加</string>
    <string name="power_guide_title">接通电源</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary">替换 : ％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码 : 工业</string>
    <string name="preferences_decode_1D_product_title">一维码 : 商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="submit">提交</string>
    <string name="user_proto">《用户协议》</string>
    <string name="verification_code">验证码</string>
</resources>