<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_common_header" />
    <TextView android:textSize="@dimen/text_small" android:textColor="@color/color_494949" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="28.0dip" android:text="@string/change_phone_warnings" android:layout_marginStart="15.0dip" />
    <com.phicomm.speaker.views.MyEditText android:id="@id/met_new_phone_number" android:paddingLeft="5.5dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" app:has_delete="true" app:hint="@string/input_new_phone_number" app:input_type="1" app:is_phone="true" app:left_label="@string/new_phone_number" app:line_margin_top="0.0dip" app:max_length="11" style="@style/et_common" />
    <LinearLayout android:orientation="horizontal" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" style="@style/et_common">
        <com.phicomm.speaker.views.MyEditText android:id="@id/met_short_message_verification_code" android:paddingLeft="5.5dip" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_weight="1.0" app:has_delete="true" app:hint="@string/captcha_sms" app:input_type="1" app:left_label="@string/verification_code" app:max_length="6" />
        <TextView android:layout_gravity="center" android:id="@id/tv_get_verification_code" android:layout_marginRight="17.0dip" android:text="@string/get_verification_code" style="@style/text_small_style" />
    </LinearLayout>
    <TextView android:enabled="false" android:id="@id/tv_next_step" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="10.0dip" android:text="@string/submit" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" style="@style/btn_common" />
</LinearLayout>