<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_common_header" />
    <com.phicomm.speaker.views.MyEditText android:id="@id/met_old_password" android:paddingLeft="5.5dip" android:paddingRight="5.5dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="27.0dip" android:layout_marginRight="15.0dip" app:has_eye="true" app:hint="@string/input_old_password" app:input_type="2" app:left_label="@string/old_password" app:max_length="20" style="@style/et_common" />
    <com.phicomm.speaker.views.MyEditText android:id="@id/met_new_password" android:paddingLeft="5.5dip" android:paddingRight="5.5dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" app:has_eye="true" app:hint="@string/input_new_password" app:input_type="2" app:left_label="@string/new_password" app:max_length="20" style="@style/et_common" />
    <TextView android:id="@id/tv_save" android:layout_marginLeft="15.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="15.0dip" android:text="@string/submit" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" style="@style/btn_common" />
</LinearLayout>