<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_common_header" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textStyle="bold" android:textColor="@color/main_color" android:layout_marginLeft="@dimen/dp_42.5" android:layout_marginTop="42.0dip" android:text="@string/password_set" style="@style/text_large_style" />
        <com.phicomm.speaker.views.MyEditText android:id="@id/myet_pwd" android:layout_marginTop="50.0dip" app:has_eye="true" app:hint="@string/hint_login_pwd" app:input_type="2" app:left_label="@string/password" app:max_length="20" style="@style/et_common" />
        <TextView android:id="@id/tv_submit" android:layout_marginTop="29.5dip" android:text="@string/next_step" style="@style/btn_common" />
    </LinearLayout>
</LinearLayout>