<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:visibility="gone" layout="@layout/include_common_header" />
    <TextView android:textSize="15.0sp" android:textColor="@color/text_large" android:id="@id/tv_config_net_cancel" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
    <TextView android:textSize="20.0sp" android:textColor="@color/text_large" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="93.0dip" android:text="@string/config_net_title" />
    <RelativeLayout android:id="@id/rl_config_net_ssid" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_marginTop="50.5dip" style="@style/et_common">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/color_494949" android:ellipsize="end" android:id="@id/tv_config_net_wifi_name" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:text="@string/config_net_scan_wifi" android:lines="1" android:layout_centerVertical="true" />
        <ImageView android:id="@id/iv_congif_net_scan_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/blue_circle_loading" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/iv_config_net_wifi_list" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="21.0dip">
        <com.phicomm.speaker.views.MyEditText android:id="@id/et_config_net_pw" android:paddingLeft="15.0dip" app:has_eye="true" app:hint="@string/config_net_hint_password" app:input_type="2" app:max_length="63" style="@style/et_common" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_hint" android:gravity="center_vertical" android:id="@id/tv_config_net_nopw" android:paddingLeft="15.0dip" android:visibility="gone" android:text="@string/config_net_hint_nopassword" android:lines="1" android:layout_centerVertical="true" style="@style/et_common" />
    </FrameLayout>
    <TextView android:enabled="true" android:id="@id/tv_config_net_connect" android:layout_marginTop="39.0dip" android:text="@string/config_net_connect" style="@style/btn_common" />
</LinearLayout>