<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/main_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:visibility="gone" layout="@layout/include_common_header" />
    <ImageView android:id="@id/iv_power_guide_back" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_back_white" />
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.5dip" android:text="@string/power_guide_title" />
    <TextView android:textSize="15.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/power_guide_tip" />
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_power_guide" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44.5dip" android:src="@drawable/anim_power_guide" />
    <TextView android:textSize="15.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="49.5dip" android:text="@string/power_guide_tip2" />
    <TextView android:enabled="true" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/tv_power_guide_next" android:background="@drawable/selector_btn_guide" android:layout_marginTop="35.0dip" android:text="@string/power_guide_btn" style="@style/btn_common" />
</LinearLayout>